# calc-module

./: .gitignore  CMakeLists.txt  README.md  headers.h  main.cpp  message.h
init.d/: calc-module
src/: kafka_connector.cpp  kafka_connector.h  main.cpp  message.cpp
